Show n95 cosine similarity on template

--- a/hw3/hw_server/search_engine/templates/search_engine/w2v_tsne.html
+++ b/hw3/hw_server/search_engine/templates/search_engine/w2v_tsne.html
@@ -79,6 +79,7 @@
 				</div>
 
                 <h3>cosine similiarity between "{{ subset_name }}" and "ct" is {{ cos_sim }}</h3>
+                <h3>cosine similiarity between "{{ subset_name }}" and "n95" is {{ n95 }}</h3>
 
 				{% comment %} <button id="randomizeData">Randomize Data</button> {% endcomment %}
 				<script>
