--- a/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
+++ b/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <form action="{% url "zipf_search" %}" method="post">
+                    <form action="{% url "tfidf" %}" method="post">
                         {% csrf_token %}
                         {% crispy form %}
                     </form>
