--- a/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
+++ b/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
@@ -40,11 +40,32 @@
 {#        show formula images #}
         <div class="container">
             <div class="row">
-                {% for i in formula %}
                 <div class="col-md-3">
-                    <img src={% static i %} id="image{{ forloop.counter0 }}">
+                    <span class="badge badge-pill badge-primary">tf</span>
                 </div>
-                {% endfor %}
+                <div class="col-md-3">
+                    <span class="badge badge-pill badge-success">idf</span>
+                </div>
+                <div class="col-md-3">
+                    <span class="badge badge-pill badge-primary">tf</span>
+                </div>
+                <div class="col-md-3">
+                    <span class="badge badge-pill badge-success">idf</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <img src={% static formula|get_element:0 %} id="image0">
+                </div>
+                <div class="col-md-3">
+                    <img src={% static formula|get_element:3 %} id="image1">
+                </div>
+                <div class="col-md-3">
+                    <img src={% static formula|get_element:0 %} id="image2">
+                </div>
+                <div class="col-md-3">
+                    <img src={% static formula|get_element:3 %} id="image3">
+                </div>
             </div>
         </div>
 {#        choose formula #}
@@ -52,22 +73,22 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Dropdown </button>
-                        <div class="dropdown-menu"><a class="dropdown-item" id="l_tf_1">First Item</a><a class="dropdown-item" id="l_tf_2">Second Item</a><a class="dropdown-item" id="l_tf_3">Third Item</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item" id="l_tf_1">raw count</a><a class="dropdown-item" id="l_tf_2">term frequency</a><a class="dropdown-item" id="l_tf_3">log normalization</a></div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Dropdown </button>
-                        <div class="dropdown-menu"><a class="dropdown-item" id="l_idf_1">First Item</a><a class="dropdown-item" id="l_idf_2">Second Item</a><a class="dropdown-item" id="l_idf_3">Third Item</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item" id="l_idf_1">inverse document frequency</a><a class="dropdown-item" id="l_idf_2">unary</a><a class="dropdown-item" id="l_idf_3">inverse document frequency smooth</a></div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Dropdown </button>
-                        <div class="dropdown-menu"><a class="dropdown-item" id="r_tf_1">First Item</a><a class="dropdown-item" id="r_tf_2">Second Item</a><a class="dropdown-item" id="r_tf_3">Third Item</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item" id="r_tf_1">raw count</a><a class="dropdown-item" id="r_tf_2">term frequency</a><a class="dropdown-item" id="r_tf_3">log normalization</a></div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown"><button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Dropdown </button>
-                        <div class="dropdown-menu"><a class="dropdown-item" id="r_idf_1">First Item</a><a class="dropdown-item" id="r_tf_2">Second Item</a><a class="dropdown-item" id="r_tf_3">Third Item</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item" id="r_idf_1">inverse document frequency</a><a class="dropdown-item" id="r_idf_2">unary</a><a class="dropdown-item" id="r_idf_3">inverse document frequency smooth</a></div>
                     </div>
                 </div>
             </div>
@@ -117,9 +138,47 @@
         {##}
         {##}
 
-        document.getElementById('r_tf_1').addEventListener('click', function () {
+{#        left tf #}
+        document.getElementById('l_tf_1').addEventListener('click', function () {
+            document.getElementById('image0').src = "{% static formula|get_element:0 %}";
+        });
+        document.getElementById('l_tf_2').addEventListener('click', function () {
             document.getElementById('image0').src = "{% static formula|get_element:1 %}";
         });
+        document.getElementById('l_tf_3').addEventListener('click', function () {
+            document.getElementById('image0').src = "{% static formula|get_element:2 %}";
+        });
+        {#left idf#}
+        document.getElementById('l_idf_1').addEventListener('click', function () {
+            document.getElementById('image1').src = "{% static formula|get_element:3 %}";
+        });
+        document.getElementById('l_idf_2').addEventListener('click', function () {
+            document.getElementById('image1').src = "{% static formula|get_element:4 %}";
+        });
+        document.getElementById('l_idf_3').addEventListener('click', function () {
+            document.getElementById('image1').src = "{% static formula|get_element:5 %}";
+        });
+        {# right tf #}
+        document.getElementById('r_tf_1').addEventListener('click', function () {
+            document.getElementById('image2').src = "{% static formula|get_element:0 %}";
+        });
+        document.getElementById('r_tf_2').addEventListener('click', function () {
+            document.getElementById('image2').src = "{% static formula|get_element:1 %}";
+        });
+        document.getElementById('r_tf_3').addEventListener('click', function () {
+            document.getElementById('image2').src = "{% static formula|get_element:2 %}";
+        });
+        {# right idf #}
+        document.getElementById('r_idf_1').addEventListener('click', function () {
+            document.getElementById('image3').src = "{% static formula|get_element:3 %}";
+        });
+        document.getElementById('r_idf_2').addEventListener('click', function () {
+            document.getElementById('image3').src = "{% static formula|get_element:4 %}";
+        });
+        document.getElementById('r_idf_3').addEventListener('click', function () {
+            document.getElementById('image3').src = "{% static formula|get_element:5 %}";
+        });
+
 
     </script>
 </body>
