--- a/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
+++ b/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
@@ -1,6 +1,5 @@
 {% load static %}
 {% load search_extra %}
-{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html>
@@ -28,9 +27,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <form action="{% url "tfidf" %}" method="post">
-                        {% csrf_token %}
-                        {% crispy form %}
+                    <form name="form" id="form">
+                        <input type="text" name="keyword" id="keyword"/>
+                        <input type="button" class="btn btn-outline-primary" name="submit" value="query" onclick="sendQuery();" />
                     </form>
                 </div>
             </div>
@@ -141,44 +140,70 @@
 {#        left tf #}
         document.getElementById('l_tf_1').addEventListener('click', function () {
             document.getElementById('image0').src = "{% static formula|get_element:0 %}";
+            l_tf = 0;
         });
         document.getElementById('l_tf_2').addEventListener('click', function () {
             document.getElementById('image0').src = "{% static formula|get_element:1 %}";
+            l_tf = 1;
         });
         document.getElementById('l_tf_3').addEventListener('click', function () {
             document.getElementById('image0').src = "{% static formula|get_element:2 %}";
+            l_tf = 2;
         });
         {#left idf#}
         document.getElementById('l_idf_1').addEventListener('click', function () {
             document.getElementById('image1').src = "{% static formula|get_element:3 %}";
+            l_idf = 0;
         });
         document.getElementById('l_idf_2').addEventListener('click', function () {
             document.getElementById('image1').src = "{% static formula|get_element:4 %}";
+            l_idf = 1;
         });
         document.getElementById('l_idf_3').addEventListener('click', function () {
             document.getElementById('image1').src = "{% static formula|get_element:5 %}";
+            l_idf = 2;
         });
         {# right tf #}
         document.getElementById('r_tf_1').addEventListener('click', function () {
             document.getElementById('image2').src = "{% static formula|get_element:0 %}";
+            r_tf = 0;
         });
         document.getElementById('r_tf_2').addEventListener('click', function () {
             document.getElementById('image2').src = "{% static formula|get_element:1 %}";
+            r_tf = 1;
         });
         document.getElementById('r_tf_3').addEventListener('click', function () {
             document.getElementById('image2').src = "{% static formula|get_element:2 %}";
+            r_tf = 2;
         });
         {# right idf #}
         document.getElementById('r_idf_1').addEventListener('click', function () {
             document.getElementById('image3').src = "{% static formula|get_element:3 %}";
+            r_idf = 0;
         });
         document.getElementById('r_idf_2').addEventListener('click', function () {
             document.getElementById('image3').src = "{% static formula|get_element:4 %}";
+            r_idf = 1;
         });
         document.getElementById('r_idf_3').addEventListener('click', function () {
             document.getElementById('image3').src = "{% static formula|get_element:5 %}";
+            r_idf = 2;
         });
 
+        function sendQuery(){
+            const keyword = $('[id="keyword"]').val();
+            $.ajax({
+                url: "/search_engine/tfidf",
+                type: 'POST',
+                data:{keyword:keyword, ltf: l_tf, lidf: l_idf, rtf: r_tf, ridf: r_idf},
+                success: function () {
+                    console.log("query success")
+                },
+                error: function () {
+                    alert("query failed")
+                }
+            });
+        };
 
     </script>
 </body>
