Change to update list by ajax

--- a/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
+++ b/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
@@ -97,29 +97,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <ul class="list-group">
-                        {% for i in l_titles %}
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
-{#                                  <h5 class="mb-1">{{ i }}</h5>#}
-                                  <small>tfidf: {{ l_weights|get_element:forloop.counter0 }}</small>
-                                </div>
-                                <p class="mb-1">{{ i }}</p>
-                              </a>
-                        {% endfor %}
+                    <ul class="list-group" id="l_title_list">
+{#                        {% for i in l_titles %}#}
+{#                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">#}
+{#                                <div class="d-flex w-100 justify-content-between">#}
+{#                                  <small>tfidf: {{ l_weights|get_element:forloop.counter0 }}</small>#}
+{#                                </div>#}
+{#                                <p class="mb-1">{{ i }}</p>#}
+{#                              </a>#}
+{#                        {% endfor %}#}
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <ul class="list-group">
-                        {% for i in r_titles %}
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
+                    <ul class="list-group" id="r_title_list">
+{#                        {% for i in r_titles %}#}
+{#                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">#}
+{#                                <div class="d-flex w-100 justify-content-between">#}
 {#                                  <h5 class="mb-1">{{ i }}</h5>#}
-                                  <small>tfidf: {{ r_weights|get_element:forloop.counter0 }}</small>
-                                </div>
-                                <p class="mb-1">{{ i }}</p>
-                              </a>
-                        {% endfor %}
+{#                                  <small>tfidf: {{ r_weights|get_element:forloop.counter0 }}</small>#}
+{#                                </div>#}
+{#                                <p class="mb-1">{{ i }}</p>#}
+{#                              </a>#}
+{#                        {% endfor %}#}
                     </ul>
                 </div>
             </div>
@@ -191,13 +190,37 @@
         });
 
         function sendQuery(){
+            // clear list
+            document.getElementById("l_title_list").innerHTML = "";
+            document.getElementById("r_title_list").innerHTML = "";
+
+            // get input keyword
             const keyword = $('[id="keyword"]').val();
             $.ajax({
                 url: "/search_engine/tfidf",
                 type: 'POST',
                 data:{keyword:keyword, ltf: l_tf, lidf: l_idf, rtf: r_tf, ridf: r_idf},
-                success: function () {
-                    console.log("query success")
+                success: function (data) {
+                    var l_list = document.getElementById("l_title_list");
+                    var r_list = document.getElementById("r_title_list");
+
+                    for (i=0;i<data['l_titles'].length;i++){
+                        l_list.innerHTML += '<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">\n' +
+                            '                                <div class="d-flex w-100 justify-content-between">\n' +
+                            '                                  <small>tfidf:' + data['l_weights'][i] + '</small>\n' +
+                            '                                </div>\n' +
+                            '                                <p class="mb-1">' + data['l_titles'][i] + '</p>\n' +
+                            '                              </a>';
+                    }
+
+                    for (i=0;i<data['r_titles'].length;i++){
+                        r_list.innerHTML += '<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">\n' +
+                            '                                <div class="d-flex w-100 justify-content-between">\n' +
+                            '                                  <small>tfidf:' + data['r_weights'][i] + '</small>\n' +
+                            '                                </div>\n' +
+                            '                                <p class="mb-1">' + data['r_titles'][i] + '</p>\n' +
+                            '                              </a>';
+                    }
                 },
                 error: function () {
                     alert("query failed")
