Change tfidf dataset

--- a/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
+++ b/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
@@ -207,7 +207,7 @@
                     for (i=0;i<data['l_titles'].length;i++){
                         l_list.innerHTML += '<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">\n' +
                             '                                <div class="d-flex w-100 justify-content-between">\n' +
-                            '                                  <small>tfidf:' + data['l_weights'][i] + '</small>\n' +
+                            '                                  <small>query term weight:' + data['l_weights'][i] + '</small>\n' +
                             '                                </div>\n' +
                             '                                <p class="mb-1">' + data['l_titles'][i] + '</p>\n' +
                             '                              </a>';
