Add show importance parapgraph

--- a/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
+++ b/hw4/hw_server/search_engine/templates/search_engine/tfidf.html
@@ -266,6 +266,7 @@
                             '                                <div class="d-flex w-100 justify-content-between">\n' +
                             '                                  <small>query term weight/cos_similarity:' + data['l_weights'][i] + '</small>\n' +
                             '                                  <small>doc len:' + data['l_len'][i] + '</small>\n' +
+                            '                                  <small>paragraph:' + data['lpara'][i] + '</small>\n' +
                             '                                </div>\n' +
                             '                                <p class="mb-1">' + data['l_titles'][i] + '</p>\n' +
                             '                              </a>';
@@ -276,6 +277,7 @@
                             '                                <div class="d-flex w-100 justify-content-between">\n' +
                             '                                  <small>query term weight/cos_similarity:' + data['r_weights'][i] + '</small>\n' +
                             '                                  <small>doc len:' + data['r_len'][i] + '</small>\n' +
+                            '                                  <small>paragraph:' + data['rpara'][i] + '</small>\n' +
                             '                                </div>\n' +
                             '                                <p class="mb-1">' + data['r_titles'][i] + '</p>\n' +
                             '                              </a>';
